--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,8 +4,8 @@ yfinance>=0.2.36
 pandas>=2.2.0
 numpy>=1.26.0
 scipy>=1.12.0
-scikit-learn>=1.4.0
-pydantic>=2.6.0
-python-multipart
 ta>=0.11.0
 deep-translator>=1.11.4
+certifi
+requests>=2.31.0
+python-dateutil>=2.8.0
